# pyarts-fluxes

./: .gitignore  README.md  dependencies  pyproject.toml  readme.md  run_v2
atmdata/single_atmosphere/: aux_earth.xml
examples/: flux_simulatior_batch_example.py  flux_simulatior_generate_LUT_example.py  flux_simulatior_single_atm_example.py  flux_simulator_batch_allsky_example.py  flux_simulator_generate_LUT_example.py  flux_simulator_prepare_atmosphere_example.py  flux_simulator_single_atm_allsky_example.py  flux_simulator_single_atm_differentLUT_examplepy  flux_simulator_single_atm_example.py  flux_simulator_single_atm_fast_example.py  run_arts.py
scripts/: flux_simulatior_batch_example.py  flux_simulatior_generate_LUT_example.py  flux_simulatior_single_atm_example.py  flux_simulator_agendas.py  flux_simulator_module.py
src/FluxSimulator/: __init__.py  _flux_simulator_agendas.py  _flux_simulator_module.py
