[project]
name = "FluxSimulator"
version = "0.5"
dependencies = [
  "numpy",
  "pyarts >=2.6.16"
]
requires-python = ">= 3.9"
authors = [
  {name = "Manfred Brath", email = "manfred.brath@uni-hamburg.de" }  
]
maintainers = [
  {name = "Manfred Brath", email = "manfred.brath@uni-hamburg.de"}
]
description = "Easy-to-use wrapper to calculate radiative fluxes with ARTS."
readme = "readme.md"

[project.urls]
Homepage = "https://github.com/atmtools/pyarts-fluxes"